--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Edit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Edit.cshtml
@@ -44,6 +44,10 @@ Affiliate: <b>@Model.Campaign.Affiliate.AffiliateName (@Model.Campaign.Affiliate
                 <td>@Html.LabelFor(m => m.Opens)</td>
                 <td>@Html.EditorFor(m => m.Opens)</td>
             </tr>
+            <tr>
+                <td>@Html.LabelFor(m => m.CombineCreatives)</td>
+                <td>@Html.EditorFor(m => m.CombineCreatives)</td>
+            </tr>
         </table>
 @{
     var creatives = (IEnumerable<ClientPortal.Data.Contexts.Creative>)ViewData["Creatives"];
