almost realtime stats, where available

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
@@ -20,50 +20,13 @@
     </div>
 </div>
 
-@helper ChangeVis(double? change, bool showPercent) {
-    if (change.HasValue && change != 0) {
-        <br />
-        <span style="white-space: nowrap">
-            <img src="~/Images/arrow_@(change > 0 ? "up" : "down").jpg" />
-            @(Math.Abs(change.Value) + (showPercent ? "%" : ""))
-        </span>
-    }
-}
-
 <!-- Row 1 -->
 <div class="row">
 
     <!-- Column 1 -->
     <div class="six columns">
         <div class="panel" id="panelSumRep">
-            <b>Summary Report</b>
-            <table class="summarytable" style="width: 100%">
-                <tr>
-                    <th></th>
-                    <th>Clicks</th>
-                    <th>Leads</th>
-                    <th>Rate</th>
-                    <th>Spend</th>
-                    @if (Model.ShowConVal)
-                    {
-                        <th>@Model.ConValName</th>
-                    }
-                </tr>
-                @foreach (var summary in Model.AdvertiserSummaries)
-                {
-                    <tr>
-                        <td style="vertical-align: middle"><a href="@summary.Link">@summary.Name</a></td>
-                        <td>@String.Format("{0:n0}", summary.Clicks)@ChangeVis(summary.PctChg_Clicks, true)</td>
-                        <td>@String.Format("{0:n0}", summary.Conversions)@ChangeVis(summary.PctChg_Conversions, true)</td>
-                        <td>@String.Format("{0:n1}", summary.ConversionRate)%@ChangeVis(summary.Chg_ConversionRate, false)</td>
-                        <td>@summary.RevenueFormatted@ChangeVis(summary.PctChg_Revenue, true)</td>
-                        @if (Model.ShowConVal)
-                        {
-                            <td>@summary.ConValFormatted(Model.ConValIsNum ? "n0" : "c")@ChangeVis(summary.PctChg_ConVal, true)</td>
-                        }
-                    </tr>
-                }
-            </table>
+            @Html.Partial("SummaryVis")
         </div>
     </div>
 
@@ -97,6 +60,7 @@
                 <div id="heatMapOuter">
                     <b>Conversions by State</b>
                     @Html.Partial("_HeatMap")
+                    <span style="float: left">(updated daily)</span>
                 </div>
             </div>
             <div class="six columns">
@@ -129,6 +93,7 @@
                 <div id="clicksByDeviceOuter">
                     <b>Mobile Clicks</b>
                     @Html.Partial("_ClicksByDevice")
+                    <span style="float: left">(updated daily)</span>
                 </div>
             </div>
             <div class="six columns">
@@ -179,6 +144,8 @@
         CreateSpendLineChart(spendDS, 'Daily Spend', 125);
         spendDS.read();
         spendDS.bind('change', function () {
+            // TODO: What happens when the timeframe is changed and it's not the same day as when this view was generated?
+            // It could be the next day, and even worse, it could be the next month. The server-generated variables are still for the (now previous) day.
             var aggs = this.aggregates();
             if ($('#dash_dateRangeSel').val() == 'mtd')
                 UpdatePerformanceChartValues(['Last Month', 'MTD', 'Projection'], [@Model.SummaryLM.Conversions, aggs.Conversions.sum, Projection(aggs.Conversions.sum)]);
@@ -204,10 +171,20 @@
 
     function RefreshDashboardRange() {
         $.get('@Url.Action("SetDashboardDateRange", "Home")', { type: $('#dash_dateRangeSel').val(), startdate: $('#dash_startdate').val(), enddate: $('#dash_enddate').val() });
+        LoadSummary();
         $('#spendLineChart').data('kendoChart').dataSource.read();
         $('#projChart').data('kendoChart').dataSource.read();
         DrawHeatMap();
         UpdateClicksByDevice();
+    }
+
+    function LoadSummary() {
+        $.ajax({
+            url: '@Url.Action("SummaryVis", new { includegoals = false })',
+            cache: false
+        }).done(function (html) {
+            $("#panelSumRep").html(html);
+        });
     }
 
     function DashboardDateChanged() {
