--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/SummaryVis.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/SummaryVis.cshtml
@@ -10,8 +10,8 @@
     }
 }
 
-<span style="float:left"><b>Summary Report</b></span>
-<span id="summaryNote" style="float: right">@(Model.LatestDaySums == null ? "" : "As of " + Html.FormatDate(Model.LatestDaySums, Model.CultureInfo, true))</span>
+<span style="float: left"><b>Summary Report</b></span>
+<span id="summaryNote" style="float: right; font-size: smaller">@(Model.LatestDaySums == null ? "" : "(As of " + Html.FormatDate(Model.LatestDaySums, Model.CultureInfo, true, true) + ")")</span>
 
 <table class="summarytable" style="width: 100%">
     <tr>
