--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_CPMSummaryPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_CPMSummaryPartial.cshtml
@@ -12,7 +12,7 @@
     <span class="paddedlabel">End:</span>
     <input id="cpmsum_enddate" name="enddate" type="text" value="@Model.EndDate" onchange="DateChanged('cpmsum')" />
     <a class="button paddedbutton" id="cpmsum_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid('cpmsum'); return false">Filter</a>
-    <a class="button paddedbutton" style="float: right" href="#" onclick="ExportCPMSumCSV(); return false">Export CSV</a>
+    <a class="button paddedbutton exportbutton" href="#" onclick="ExportCPMSumCSV(); return false">Export CSV</a>
 </div>
 <div id="cpmsumGrid"></div>
 
