--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_ConversionReportPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_ConversionReportPartial.cshtml
@@ -1,22 +1,28 @@
 ﻿@model ClientPortal.Web.Models.ReportModel
 
-<div style="height: 35px;">
-    <select style="width: 140px" id="conrep_dateRangeSel" onchange="ChangeDateRange('conrep')">
-        <option value="yesterday">Yesterday</option>
-        <option value="wtd">Week to Date</option>
-        <option value="mtd">Month to Date</option>
-        <option value="ytd">Year to Date</option>
-        <option value="lastweek">Last Week</option>
-        <option value="lastmonth">Last Month</option>
-        <option value="custom">- custom -</option>
-    </select>
-    <span class="paddedlabel">Start:</span>
-    <input id="conrep_startdate" name="startdate" type="text" value="@Model.StartDate" onchange="DateChanged('conrep')" />
-    <span class="paddedlabel">End:</span>
-    <input id="conrep_enddate" name="enddate" type="text" value="@Model.EndDate" onchange="DateChanged('conrep')" />
-    <a class="button paddedbutton" id="conrep_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid('conrep'); return false">Filter</a>
-    <span id="conrep_note">*</span>
-    <a class="button paddedbutton" style="float: right" href="#" onclick="ExportConRepCSV(); return false">Export CSV</a>
+<div style="height: 50px;">
+    <div style="float: left; background-color: #ffffff; padding-right: 1px">
+        <select style="width: 140px" id="conrep_dateRangeSel" onchange="ChangeDateRange('conrep')">
+            <option value="yesterday">Yesterday</option>
+            <option value="wtd">Week to Date</option>
+            <option value="mtd">Month to Date</option>
+            <option value="ytd">Year to Date</option>
+            <option value="lastweek">Last Week</option>
+            <option value="lastmonth">Last Month</option>
+            <option value="custom">- custom -</option>
+        </select>
+        <span class="paddedlabel">Start:</span>
+        <input id="conrep_startdate" name="startdate" type="text" value="@Model.StartDate" onchange="DateChanged('conrep')" />
+        <span class="paddedlabel">End:</span>
+        <input id="conrep_enddate" name="enddate" type="text" value="@Model.EndDate" onchange="DateChanged('conrep')" />
+        <a class="button paddedbutton" id="conrep_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid('conrep'); return false">Filter</a>
+    </div>
+    <div style="float: right">
+        <span class="statsnote subtext">Conversion Stats available through @Model.YesterdayString</span>
+    </div>
+</div>
+<div style="position: fixed; top: 150px; right: 15px; z-index: -1">
+    <a class="button paddedbutton exportbutton" href="#" onclick="ExportConRepCSV(); return false">Export CSV</a>
 </div>
 <div id="conrepChartSection" class="k-content">
     <div class="chart-wrapper">
@@ -39,8 +45,6 @@
         $('#conrep_dateRangeSel').kendoDropDownList();
         $('#conrep_startdate').kendoDatePicker({ footer: ' ' });
         $('#conrep_enddate').kendoDatePicker({ footer: ' ' });
-
-        $('#conrep_note').kendoTooltip({ content: 'Note: Stats available through yesterday' });
 
         var readData = function () {
             return {
