--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_DailySummaryPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_DailySummaryPartial.cshtml
@@ -12,7 +12,7 @@
     <span class="paddedlabel">End:</span>
     <input id="daysum_enddate" name="enddate" type="text" value="@Model.EndDate" onchange="DateChanged('daysum')" />  @* show all in USD for now *@
     <a class="button paddedbutton" id="daysum_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid('daysum', true); return false">Filter</a>
-    <a class="button paddedbutton" style="float: right" href="#" onclick="ExportDaySumCSV(); return false">Export CSV</a>
+    <a class="button paddedbutton exportbutton" href="#" onclick="ExportDaySumCSV(); return false">Export CSV</a>
 </div>
 <div id="daysumChartSection" class="k-content">
     <div class="configuration k-widget k-header" style="width: 170px; float: right">
